use meshfix 1.2 from an old copy

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/fangq/cork.git
 [submodule "tools/meshfix"]
 	path = tools/meshfix
-	url = https://github.com/alecjacobson/meshfix.git
+	url = https://github.com/fangq/meshfix.git
