fix loading of boost
-- Found Boost: /opt/homebrew/lib/cmake/Boost-1.83.0/BoostConfig.cmake (found suitable version "1.83.0", minimum required is "1.66")

--- a/tools/cgalmesh/CMakeLists.txt
+++ b/tools/cgalmesh/CMakeLists.txt
@@ -52,7 +52,7 @@ if ( CGAL_FOUND )
   endif()
 
 
-  if ( Boost_FOUND AND Boost_VERSION GREATER 103400 )
+  if ( Boost_FOUND )
     include( CGAL_CreateSingleSourceCGALProgram )
 
     # Compilable examples
