compatibility with CGAL 5.0

--- a/tools/cgalmesh/CMakeLists.txt
+++ b/tools/cgalmesh/CMakeLists.txt
@@ -42,7 +42,9 @@ if ( CGAL_FOUND )
       ON)
     if( LINK_WITH_TBB )
       find_package(TBB REQUIRED)
-      include(CGAL_TBB_support)
+      if (CGAL_VERSION VERSION_GREATER_EQUAL 5.1)
+        include(CGAL_TBB_support)
+      endif()
     endif( LINK_WITH_TBB )
   endif()
 
@@ -58,8 +60,14 @@ if ( CGAL_FOUND )
     if( WITH_CGAL_ImageIO )
       if( CGAL_ImageIO_USE_ZLIB )
         create_single_source_cgal_program( "mesh_3D_image.cpp")
-        if(CGAL_ACTIVATE_CONCURRENT_MESH_3 AND TARGET CGAL::TBB_support)
-          target_link_libraries(mesh_3D_image PUBLIC CGAL::TBB_support)
+        if (CGAL_VERSION VERSION_GREATER_EQUAL 5.1)
+          if(CGAL_ACTIVATE_CONCURRENT_MESH_3 AND TARGET CGAL::TBB_support)
+            target_link_libraries(mesh_3D_image PUBLIC CGAL::TBB_support)
+          endif()
+        else()
+          if(CGAL_ACTIVATE_CONCURRENT_MESH_3 AND TBB_FOUND)
+              CGAL_target_use_TBB(mesh_3D_image)
+          endif()
         endif()
       else()
         message( STATUS "NOTICE: The examples mesh_3D_image.cpp and mesh_3D_image_variable_size.cpp need CGAL_ImageIO to be configured with ZLIB support, and will not be compiled." )
