--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -33,15 +33,15 @@ jobs:
       - name: Run octave test
         run: |
           octave-cli --version
-          octave-cli --eval "addpath(pwd);cd sample; demo_vol2mesh_ex1; demo_vol2mesh_ex1b; demo_vol2mesh_ex1c"
-          octave-cli --eval "addpath(pwd);cd sample; demo_vol2mesh_ex2; demo_vol2mesh_ex3"
-          octave-cli --eval "addpath(pwd);cd sample; demo_surf2mesh_ex1"
-          octave-cli --eval "addpath(pwd);cd sample; demo_directplc_ex1"
-          octave-cli --eval "addpath(pwd);cd sample; demo_grayscale_ex1"
-          octave-cli --eval "addpath(pwd);cd sample; demo_shortcut_ex1"
-          octave-cli --eval "addpath(pwd);cd sample; demo_surf2vol_ex1"
-          octave-cli --eval "addpath(pwd);cd sample; demo_label_sizing"
-          octave-cli --eval "addpath(pwd);cd sample; demo_qmeshcut_ex1"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex1; toc; demo_vol2mesh_ex1b; demo_vol2mesh_ex1c"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex2; toc; demo_vol2mesh_ex3; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2mesh_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_directplc_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_grayscale_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_shortcut_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2vol_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_label_sizing; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_qmeshcut_ex1; toc"
 
   matlab_test:
     name: MATLAB test
@@ -61,21 +61,21 @@ jobs:
       - name: Run MATLAB test
         uses: matlab-actions/run-command@v1
         with:
-          command: addpath(pwd);cd sample; demo_vol2mesh_ex1; demo_vol2mesh_ex1b; demo_vol2mesh_ex1c
+          command: addpath(pwd);cd sample; tic; demo_vol2mesh_ex1; toc; demo_vol2mesh_ex1b; toc; demo_vol2mesh_ex1c; toc
       - name: Run MATLAB examples
         uses: matlab-actions/run-command@v1
         with:
-          command: addpath(pwd);cd sample; demo_vol2mesh_ex2; demo_vol2mesh_ex3
+          command: addpath(pwd);cd sample; tic; demo_vol2mesh_ex2; toc; demo_vol2mesh_ex3; toc
       - name: Run MATLAB examples
         uses: matlab-actions/run-command@v1
         with:
-          command: addpath(pwd);cd sample; demo_surf2mesh_ex1; demo_directplc_ex1; demo_grayscale_ex1
+          command: addpath(pwd);cd sample; tic; demo_surf2mesh_ex1; demo_directplc_ex1; toc; demo_grayscale_ex1; toc
       - name: Run MATLAB examples
         uses: matlab-actions/run-command@v1
         with:
-          command: addpath(pwd);cd sample; demo_shortcut_ex1; demo_surf2vol_ex1; demo_label_sizing
+          command: addpath(pwd);cd sample; tic; demo_shortcut_ex1; demo_surf2vol_ex1; toc; demo_label_sizing; toc
       - name: Run MATLAB examples
         uses: matlab-actions/run-command@v1
         with:
-          command: addpath(pwd);cd sample; demo_qmeshcut_ex1
+          command: addpath(pwd);cd sample; tic; demo_qmeshcut_ex1; toc
 
