[ci] use octave 5.2 on windows

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -26,22 +26,22 @@ jobs:
             brew install octave
           fi
           if [[ "$RUNNER_OS" == "Windows" ]]; then
-            curl --retry 3 -kL http://cdimage.debian.org/mirror/gnu.org/gnu/octave/windows/octave-7.3.0-w64-64.7z --output octave_7.3.0.7z
-            7z x octave_7.3.0.7z -ooctave -y
-            echo "$PWD/octave/octave-7.3.0-w64-64/mingw64/bin" >> $GITHUB_PATH
+            curl --retry 3 -kL http://cdimage.debian.org/mirror/gnu.org/gnu/octave/windows/octave-5.2.0-w64-64.7z --output octave_5.2.0.7z
+            7z x octave_5.2.0.7z -ooctave -y
+            echo "$PWD/octave/octave-5.2.0-w64-64/mingw64/bin" >> $GITHUB_PATH
           fi
       - name: Run octave test
         run: |
           octave-cli --version
-          #octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex1; toc; demo_vol2mesh_ex1b; demo_vol2mesh_ex1c"
-          #octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex2; toc"
-          #octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2mesh_ex1; toc"
-          #octave-cli --eval "addpath(pwd);cd sample; tic; demo_directplc_ex1; toc"
-          #octave-cli --eval "addpath(pwd);cd sample; tic; demo_grayscale_ex1; toc"
-          #octave-cli --eval "addpath(pwd);cd sample; tic; demo_shortcut_ex1; toc"
-          #octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2vol_ex1; toc"
-          #octave-cli --eval "addpath(pwd);cd sample; tic; demo_label_sizing; toc"
-          #octave-cli --eval "addpath(pwd);cd sample; tic; demo_qmeshcut_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex1; toc; demo_vol2mesh_ex1b; demo_vol2mesh_ex1c"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex2; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2mesh_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_directplc_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_grayscale_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_shortcut_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2vol_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_label_sizing; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_qmeshcut_ex1; toc"
       - name: Rebuild binaries
         if: ${{ runner.os == 'Linux' }}   # use these variables to limit a step only on a specific OS
         run: |
