[ci] use qt graphics toolkit for octave

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -36,7 +36,7 @@ jobs:
           octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex1; toc; demo_vol2mesh_ex1b; demo_vol2mesh_ex1c"
           octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex2; toc"
           octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2mesh_ex1; toc"
-          octave-cli --eval "addpath(pwd);cd sample; tic; demo_directplc_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; disp(graphics_toolkit); graphics_toolkit('qt'); tic; demo_directplc_ex1; toc"
           octave-cli --eval "addpath(pwd);cd sample; tic; demo_grayscale_ex1; toc"
           octave-cli --eval "addpath(pwd);cd sample; tic; demo_shortcut_ex1; toc"
           octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2vol_ex1; toc"
@@ -71,7 +71,7 @@ jobs:
       - name: Run MATLAB examples
         uses: matlab-actions/run-command@v1
         with:
-          command: addpath(pwd);cd sample; tic; demo_vol2mesh_ex2; toc; toc
+          command: addpath(pwd);cd sample; tic; demo_vol2mesh_ex2; toc
       - name: Run MATLAB examples
         uses: matlab-actions/run-command@v1
         with:
