--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       # provided octave versions: ubuntu-20.04 = 5.2, ubuntu-22.04 = 6.4, macos-12 = 8.1, windows-2019 = 7.3
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04, windows-2019]
+        os: [ubuntu-20.04, ubuntu-22.04, macos-13, windows-2019]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
@@ -23,6 +23,7 @@ jobs:
         run: |
           [[ "$RUNNER_OS" == "Linux" ]] && sudo apt-get update && sudo apt-get install -y octave cmake libcgal-dev libsuperlu-dev libsuitesparse-dev libgmp-dev libtbb-dev octave-image
           if [[ "$RUNNER_OS" == "macOS" ]]; then
+            brew install gnuplot
             brew install octave
           fi
           if [[ "$RUNNER_OS" == "Windows" ]]; then
@@ -36,7 +37,7 @@ jobs:
       - name: Run octave test
         run: |
           octave-cli --version
-          octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex1; toc; demo_vol2mesh_ex1b; demo_vol2mesh_ex1c"
+          octave-cli --eval "addpath(pwd);cd sample; disp(graphics_toolkit); tic; demo_vol2mesh_ex1; toc; demo_vol2mesh_ex1b; demo_vol2mesh_ex1c"
           octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex2; toc"
           octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2mesh_ex1; toc"
           octave-cli --eval "addpath(pwd);cd sample; tic; demo_directplc_ex1; toc"
