--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           [[ "$RUNNER_OS" == "Linux" ]] && sudo apt-get update && sudo apt-get install -y octave cmake libcgal-dev libsuperlu-dev libsuitesparse-dev libgmp-dev libtbb-dev octave-image
           if [[ "$RUNNER_OS" == "macOS" ]]; then
+            brew install gnuplot
             brew install octave
           fi
           if [[ "$RUNNER_OS" == "Windows" ]]; then
@@ -31,20 +32,20 @@ jobs:
             echo "$PWD/octave/octave-5.2.0-w64-64/mingw64/bin" >> $GITHUB_PATH
           fi
       - name: Install octave-image (Windows only)
-        if: ${{ runner.os == 'Windows' }}
+        if: ${{ runner.os != 'Linux' }}
         run: octave-cli --eval "pkg install -forge image"
       - name: Run octave test
         run: |
           octave-cli --version
-          octave --eval "addpath(pwd);cd sample; disp(graphics_toolkit); tic; demo_vol2mesh_ex1; toc; demo_vol2mesh_ex1b; demo_vol2mesh_ex1c"
-          octave --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex2; toc"
-          octave --eval "addpath(pwd);cd sample; tic; demo_surf2mesh_ex1; toc"
-          octave --eval "addpath(pwd);cd sample; tic; demo_directplc_ex1; toc"
-          octave --eval "addpath(pwd);cd sample; tic; demo_grayscale_ex1; toc"
-          octave --eval "addpath(pwd);cd sample; tic; demo_shortcut_ex1; toc"
-          octave --eval "addpath(pwd);cd sample; tic; demo_surf2vol_ex1; toc"
-          octave --eval "addpath(pwd);cd sample; tic; demo_label_sizing; toc"
-          octave --eval "addpath(pwd);cd sample; tic; demo_qmeshcut_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex1; toc; demo_vol2mesh_ex1b; demo_vol2mesh_ex1c"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_vol2mesh_ex2; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2mesh_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_directplc_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_grayscale_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_shortcut_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_surf2vol_ex1; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_label_sizing; toc"
+          octave-cli --eval "addpath(pwd);cd sample; tic; demo_qmeshcut_ex1; toc"
       - name: Rebuild binaries
         if: ${{ runner.os == 'Linux' }}   # use these variables to limit a step only on a specific OS
         run: |
