--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -73,7 +73,7 @@ jobs:
     name: MATLAB test
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-24.04, macos-12, windows-2019]
+        os: [ubuntu-20.04, ubuntu-24.04, macos-12, windows-2019, windows-2022]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout repo
@@ -87,6 +87,9 @@ jobs:
       - name: Test linux32 binaries
         if: ${{ matrix.os == 'ubuntu-24.04' }}
         run:  rm -rf bin/*.mexa64
+      - name: Test win32 binaries
+        if: ${{ matrix.os == 'windows-2019' }}
+        run:  rm -rf bin/*x86-64.exe
       - name: Run MATLAB test - demo_vol2mesh_ex1
         uses: matlab-actions/run-command@v1
         with:
