--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -75,6 +75,10 @@ jobs:
       matrix:
         os: [ubuntu-20.04, ubuntu-24.04, macos-12, windows-2019, windows-2022]
     runs-on: ${{ matrix.os }}
+    defaults:
+      run:
+        shell: bash
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
