--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -27,7 +27,7 @@ jobs:
             brew install gnuplot
             brew install octave
           else
-            curl --retry 3 -kL http://cdimage.debian.org/mirror/gnu.org/gnu/octave/windows/octave-4.4.0-w64-64.7z --output octave_4.4.0.7z
+            curl --retry 3 -kL http://cdimage.debian.org/mirror/gnu.org/gnu/octave/windows/octave-4.4.0-w64.7z --output octave_4.4.0.7z
             7z x octave_4.4.0.7z -ooctave -y
             echo "$PWD/octave/octave-4.4.0-w64-64/mingw64/bin" >> $GITHUB_PATH
           fi
