--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install octave-image (Windows)
         if: ${{ runner.os == 'Windows' }}
         run: |
-          curl --retry 3 -kL https://mcx.space/wiki/upload/image-2.14.0.tar.gz --output image-2.14.0.tar.gz
+          curl -v --retry 3 -kL https://mcx.space/wiki/upload/image-2.14.0.tar.gz --output image-2.14.0.tar.gz
           octave-cli --eval "pkg install image-2.14.0.tar.gz"
       - name: Install octave-image (MacOS)
         if: ${{ runner.os == 'MacOS' }}
