--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -27,16 +27,13 @@ jobs:
             brew install gnuplot
             brew install octave
           else
-            curl --retry 3 -kL http://cdimage.debian.org/mirror/gnu.org/gnu/octave/windows/octave-6.2.0-w64-64.7z --output octave_6.2.0.7z
-            7z x octave_6.2.0.7z -ooctave -y
-            echo "$PWD/octave/octave-6.2.0-w64-64/mingw64/bin" >> $GITHUB_PATH
+            curl --retry 3 -kL http://cdimage.debian.org/mirror/gnu.org/gnu/octave/windows/octave-5.2.0-w64-64.7z --output octave_5.2.0.7z
+            7z x octave_5.2.0.7z -ooctave -y
+            echo "$PWD/octave/octave-5.2.0-w64-64/mingw64/bin" >> $GITHUB_PATH
           fi
       - name: Install octave-image (Windows)
         if: ${{ runner.os == 'Windows' }}
-        run: |
-          curl --retry 3 -kL https://mcx.space/wiki/upload/image-2.10.0.tar.gz --output image-2.10.0.tar.gz
-          octave-cli --version
-          octave-cli --eval "pkg install -verbose image-2.10.0.tar.gz"
+        run: octave-cli --eval "pkg install -forge image"
       - name: Install octave-image (MacOS)
         if: ${{ runner.os == 'MacOS' }}
         run: octave-cli --eval "pkg install -forge image"
