[ci] use 64bit mex on linux

--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -32,6 +32,7 @@ jobs:
             echo "$PWD/octave/octave-5.2.0-w64-64/mingw64/bin" >> $GITHUB_PATH
           fi
       - name: Test linux32 binaries
+        if: false
         if: ${{ matrix.os == 'ubuntu-24.04' }}
         run:  rm -rf bin/*.mexa64
       - name: Run Octave unit tests
@@ -88,6 +89,7 @@ jobs:
         with:
           release: R2022a
       - name: Test linux32 binaries
+        if: false
         if: ${{ matrix.os == 'ubuntu-24.04' }}
         run:  rm -rf bin/*.mexa64
       - name: Test win32 binaries
