--- a/.github/workflows/run_test.yml
+++ b/.github/workflows/run_test.yml
@@ -69,7 +69,7 @@ jobs:
     name: MATLAB test
     strategy:
       matrix:
-        os: [ubuntu-24.04, macos-13, windows-2022]
+        os: [ubuntu-24.04, macos-13, macos-14, windows-2022]
     runs-on: ${{ matrix.os }}
     defaults:
       run:
